--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "formik": "^2.4.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.13.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
